really satisfied with fbm effect here

--- a/webgl.html
+++ b/webgl.html
@@ -9,7 +9,9 @@
 
 
     <body>
-        <canvas id="glcanvas"></canvas>
+        <canvas id="glcanvas">Oh no, canvas not supported :(</canvas>
+        <p id="content">eli dot sohl dot com</p>
+        <p id="enter">enter</p>
     </body>
 
 
@@ -140,8 +142,6 @@ float snoise(vec4 v) {
     return 49.0 * ( dot(m0*m0, vec3( dot( p0, x0 ), dot( p1, x1 ), dot( p2, x2 )))
                + dot(m1*m1, vec2( dot( p3, x3 ), dot( p4, x4 ) ) ) ) ;
 }
-
-
 /********** 4D simplex noise implementation ends ***********/
 
 
@@ -149,12 +149,12 @@ float snoise(vec4 v) {
 float fbm (in vec4 point) {
     // Initial values
     float value = 0.0;
-    float amplitude = .5;
+    float amplitude = .67;
     float frequency = 0.;
     // Loop of octaves
     for (int i = 0; i < OCTAVES; i++) {
         value += amplitude * snoise(point);
-        point *= 1.9;
+        point *= 1.95;
         amplitude *= .5;
     }
     return value;
@@ -164,13 +164,13 @@ float fbm (in vec4 point) {
 vec4 serialize(vec2 ab) {
     // maintaining compatibility with GLSL 2 means we don't get bitwise
     // operators, so we have to do some ugly hacks in here to emulate them
-    ivec2 as_ints = ivec2(ab * float(0xFFFF));
+    ivec2 as_ints = ivec2(ab * 65535.0);
 
     int a_big = as_ints.x / 0xFF;
     int a_lil = as_ints.x - a_big*0xFF;
 
-    int b_big = as_ints.x / 0xFF;
-    int b_lil = as_ints.x - a_big*0xFF;
+    int b_big = as_ints.y / 0xFF;
+    int b_lil = as_ints.y - b_big*0xFF;
 
     return vec4(a_big, a_lil, b_big, b_lil) / 255.0;
 }
@@ -180,19 +180,19 @@ void main() {
     //vec2 pos = vec2(gl_FragCoord.xy/u_resolution.xy);
     vec2 pos = vec2(6.28*gl_FragCoord.xy/256.0);
 
+    // cute lil trick: get the texture to tile in a visually interesting way
+    // and without discontinuities by treating x and y as theta values for
+    // two orthogonal 2D circles embedded in 4D space
+
     float x1 = cos(pos.x) - t/1000.0;
     float y1 = sin(pos.x) + t/420.0;
     float x2 = cos(pos.y) + t/420.0;
     float y2 = sin(pos.y) + t/1000.0;
     vec4 point = vec4(x1, y1, x2, y2);
 
-    float noise_1 = fbm(point);
-    float noise_2 = fbm(point);
-    float noise_3 = fbm(point);
-    
-    gl_FragColor = vec4(noise_1*noise_1*0.6, noise_2*0.9, noise_3, 1);
-    //gl_FragColor = serialize(vec2(fbm(point), 0));
-    //gl_FragColor = vec4(vec3(fbm(point)), 1);
+    float noise = max(fbm(point), 0.67*fbm(point+1.0));
+    gl_FragColor = serialize(vec2(noise, 0.0));
+    //gl_FragColor = vec4(noise*noise*0.2, noise*0.9, noise, 1);
 }
 
 
@@ -218,10 +218,6 @@ vec2 deserialize(vec4 v) {
 
 
 void main() {
-    //vec2 pos = abs(gl_FragCoord.xy - (u_resolution / vec2(2.0, 0.0)));
-    //vec2 col = mod(pos, 64.0) / 64.0;
-    //gl_FragColor = vec4(col, 0.5, 1);
-
     vec2 offset = abs(gl_FragCoord.xy - (u_resolution * vec2(0.5, 1.0)));
     if (offset.x > 420.0 || offset.y > 535.0 || offset.y < 23.0) {
         gl_FragColor = vec4(0, 0, 0, 1);
@@ -230,10 +226,11 @@ void main() {
 
     //vec2 ab = deserialize(texture2D(u_grayscott, pos));
     vec2 pos = mod(gl_FragCoord.xy, 256.0)/256.0;
-    vec4 ab = texture2D(u_grayscott, pos);
+    vec2 ab = deserialize(texture2D(u_grayscott, pos));
     //if (ab.y == 0.0) gl_FragColor = vec4(1, 0, 0, 1);
     //else gl_FragColor = vec4(0, 1, 0, 1);
-    gl_FragColor = ab;
+    float noise = ab.x;
+    gl_FragColor = vec4(1.3*noise*(1.0-noise)*(1.0-noise), noise*0.9, noise, 1);
 }
 
 
