added redirect at end of animation

--- a/webgl.html
+++ b/webgl.html
@@ -244,4 +244,5 @@ void main() {
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
     <script src="./core.js"></script>  <!-- Load WebGL and set up RD effect -->
+    <link rel="prerender" href="//example.com/next-page.html">
 </html>
