adjustments, added mocked content box

--- a/home.html
+++ b/home.html
@@ -3,4 +3,10 @@ layout: webgl
 ---
 
 
-hi!!
+<div class="contentbox">
+    <p>hi!!</p>
+</div>
+
+<script>
+$(".contentbox").fadeIn(3400);
+</script>
