added headings and nav to all pages

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,12 @@
 layout: webgl-main
 ---
 
-<div class="contentbox">
-    <p>hey call me yeah?</p>
+<div class="container contentbox">
+    <div class="contents">
+        <h1 class="display-1">contact</h1>
+        <hr>
+        <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/gallery.html">gallery</a> | contact
+        <hr>
+        <p>hey call me yeah?</p>
+    </div>
 </div>
