--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,12 @@
 layout: webgl-main
 ---
 
-<div class="contentbox">
-    <p>pics here</p>
+<div class="container contentbox">
+    <div class="contents">
+        <h1 class="display-1">gallery</h1>
+        <hr>
+        <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | gallery | <a href="/contact.html">contact</a>
+        <hr>
+        <p>pics go here</p>
+    </div>
 </div>
