--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ layout: webgl-main
     <div class="contents">
         <h1 class="display-1">sohliloquies</h1>
         <hr>
-        blog | projects | gallery | contact
+        blog | <a href="/projects.html">projects</a> | <a href="/gallery.html">gallery</a> | <a href="/contact.html">contact</a>
         <hr>
 
 
