--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: webgl-main
     <div class="contents">
         <h1 class="display-1">contact</h1>
         <hr>
-        <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/gallery.html">gallery</a> | contact
+        <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | contact
         <hr>
         <p>hey call me yeah?</p>
     </div>
