--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ layout: webgl-main
     <div class="contents">
         <h1 class="display-1">projects</h1>
         <hr>
-        <a href="/blog.html">blog</a> | projects | <a href="/gallery.html">gallery</a> | <a href="/contact.html">contact</a>
+        <a href="/blog.html">blog</a> | projects | <a href="/contact.html">contact</a>
         <hr>
         <p>theseus, light show stuff, whatever else</p>
     </div>
