added a post, removed webgl-* names from layouts

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 ---
-layout: webgl-main
+layout: main
 ---
 
 <div class="container contentbox">
@@ -10,36 +10,13 @@ layout: webgl-main
         <hr>
 
 
-        <p>Lorem ipsum dolor amet adaptogen everyday carry copper mug, vaporware viral aute celiac bitters. Biodiesel polaroid meditation williamsburg. Tumeric gluten-free next level, schlitz in anim live-edge ut pork belly chicharrones keffiyeh. Pour-over hammock anim organic hella vice. Hexagon paleo mumblecore affogato keytar jean shorts marfa. Hot chicken wolf hashtag, minim poutine asymmetrical echo park paleo VHS kale chips beard meditation qui aliquip photo booth.</p>
-
-        <p>Deserunt street art church-key shabby chic cardigan keffiyeh retro fixie. Vegan iPhone pitchfork whatever pabst vice, ex chartreuse ea meh church-key asymmetrical listicle synth. Tacos id voluptate, aliquip brooklyn shabby chic tumeric hoodie thundercats hell of taiyaki raclette. Occaecat irure craft beer coloring book chartreuse reprehenderit sint.</p>
-
-        <p>Mollit crucifix taxidermy XOXO, commodo occaecat kombucha. Lyft consequat viral occupy in selfies. Man bun gluten-free minim mixtape hashtag yr. Pok pok mixtape copper mug mollit, irure pickled polaroid selvage man bun hashtag hammock. Artisan aliqua retro laboris readymade PBR&B selvage adipisicing nulla.</p>
-
-        <p>Pok pok farm-to-table echo park copper mug. Sriracha paleo kitsch pabst meditation four loko readymade tattooed. Snackwave taiyaki unicorn gochujang photo booth meditation palo santo mixtape green juice brooklyn squid. Fanny pack locavore gentrify, ut meditation photo booth tumeric drinking vinegar health goth copper mug.</p>
-
-        <p>Shoreditch chia tofu beard magna ennui, health goth hashtag laborum. Lo-fi eiusmod hot chicken bushwick tbh ut live-edge id four loko in banh mi. Mollit forage retro you probably haven't heard of them fam sustainable. Poke austin knausgaard before they sold out forage slow-carb taxidermy synth. Listicle kale chips put a bird on it, tempor kombucha activated charcoal literally offal. Ramps in forage ea unicorn subway tile proident snackwave consectetur chillwave swag austin cray. Aliquip austin thundercats copper mug blog snackwave.</p>
-
-        <p>Adipisicing jean shorts salvia neutra quis. Yr ipsum taiyaki, microdosing seitan chillwave pork belly gentrify plaid fam listicle meggings authentic hammock hella. Jean shorts aesthetic gluten-free, vaporware godard cold-pressed tattooed 3 wolf moon austin venmo fingerstache keytar aliqua ennui synth. Vice labore lumbersexual, incididunt craft beer artisan cred do. Next level kitsch wayfarers humblebrag cold-pressed selvage, tofu 90's. In YOLO ipsum pinterest, palo santo truffaut ea voluptate intelligentsia meditation vinyl dreamcatcher helvetica bushwick hella.</p>
-
-        <p>Direct trade unicorn kitsch VHS magna pickled. Ut disrupt dolore vexillologist offal laborum occaecat adaptogen adipisicing kinfolk mumblecore next level. Jean shorts kogi street art food truck vegan, beard proident DIY sustainable occaecat dreamcatcher drinking vinegar hoodie exercitation blog. Affogato helvetica drinking vinegar, tofu YOLO tattooed pitchfork vape craft beer ramps excepteur palo santo swag cillum. Fam next level irure mollit. DIY unicorn vape neutra mollit tilde butcher poutine crucifix squid banh mi consectetur jean shorts flannel.</p>
-
-        <p>Sriracha twee proident, post-ironic flannel echo park commodo cold-pressed qui quinoa man bun. Raclette aesthetic locavore chambray. PBR&B art party aesthetic, pok pok hexagon dolore venmo celiac nisi fingerstache forage. Sustainable taiyaki tumblr palo santo. Tilde vinyl adaptogen, 8-bit cloud bread neutra pinterest hella edison bulb magna 3 wolf moon hell of gluten-free humblebrag. Occupy sartorial shabby chic pabst. Cronut mustache pour-over raw denim, actually meh iPhone put a bird on it non.</p>
-
-        <p>Mlkshk sunt hashtag wolf hoodie hella lorem. Brooklyn occupy post-ironic fashion axe try-hard proident distillery cloud bread live-edge farm-to-table tempor. Laboris in kombucha, esse put a bird on it edison bulb +1. Beard aute polaroid literally, brooklyn wayfarers bushwick offal dolor enamel pin artisan hella. Jianbing plaid lomo, anim consectetur banjo selfies stumptown do raw denim fam ipsum kitsch. Gochujang irony XOXO glossier, dolor et leggings kale chips put a bird on it pork belly taiyaki cillum. Live-edge pinterest banh mi whatever heirloom, ut umami irony post-ironic waistcoat skateboard magna.</p>
-
-        <p>Asymmetrical affogato post-ironic pour-over 90's. Pok pok post-ironic semiotics mustache echo park, occupy hexagon squid vinyl. Lumbersexual yuccie hexagon blue bottle. Af small batch air plant, umami everyday carry gochujang aliquip bespoke sint chillwave tempor you probably haven't heard of them palo santo. Hexagon mustache ut, sed everyday carry pitchfork VHS gluten-free four dollar toast plaid voluptate elit cold-pressed. Normcore fashion axe cloud bread plaid irony af in.</p>
-
-        <p>Proident sed kickstarter man braid duis kale chips pariatur activated charcoal. Excepteur four dollar toast chia officia synth aesthetic lorem readymade four loko etsy. IPhone 3 wolf moon health goth poutine art partyng book nostrud. Ad irure trust fund affogato quis taxidermy.</p>
-
-        <p>Etsy typewriter raclette esse migas, tempor prism consequat direct trade food truck magna quis man bun. Gastropub you probably haven't heard of them farm-to-table ullamco subway tile bicycle rights. Migas godard art party humblebrag tote bag venmo forage elit bicycle rights. Elit occaecat locavore, literally messenger bag consequat ut tilde schlitz selfies tbh. Activated charcoal post-ironic skateboard proident excepteur tumeric anim reprehenderit banh mi vegan celiac farm-to-table stumptown photo booth. Laboris subway tile raclette 8-bit lumbersexual reprehenderit commodo shabby chic shoreditch excepteur cillum sriracha taxidermy umami neutra. Listicle leggings anim cupidatat offal, distillery vice pok pok selfies kitsch irure.</p>
-
-        <p>Quinoa bitters kitsch schlitz godard YOLO, brooklyn culpa. Seitan celiac jianbing chia raw denim franzen reprehenderit. Reprehenderit brooklyn duis stumptown hot chicken waistcoat lyft godard cornhole helvetica. Truffaut glossier listicle pabst, dolore letterpress chicharrones nisi cornhole. Consectetur est roof party venmo in meggings. Retro listicle quinoa actually, readymade salvia tacos cold-pressed taiyaki mustache. Kitsch hell of irure gentrify edison bulb.</p>
-
-        <p>Leggings heirloom scenester, in fugiat sriracha ramps. Actually irure palo santo helvetica cray, kitsch laborum salvia venmo tote bag vice XOXO tofu fanny pack. Skateboard adipisicing ennui, austin nulla stumptown wayfarers farm-to-table esse mlkshk. Eu retro four dollar toast, nulla reprehenderit distillery heirloom. Godard cloud bread commodo, green juice chia taxidermy do pariatur scenester schlitz roof party etsy. Cupidatat cronut bespoke chia, marfa esse duis.</p>
-
-        <p>Semiotics enim YOLO woke. Williamsburg tofu affogato, pitchfork iceland copper mug ullamco poke XOXO kickstarter id bitters messenger bag. Shaman kombucha cold-pressed occaecat vegan excepteur, photo booth put a bird on it aute shoreditch. Ennui gochujang shabby chic, pop-up kogi distillery food truck gluten-free. Cupidatat lo-fi brooklyn, migas gluten-free fanny pack viral duis photo booth craft beer nostrud actually humblebrag. Et freegan street art, ipsum cloud bread YOLO sed synth do. Succulents chillwave yuccie schlitz do ut.</p>
-
+        {% for post in site.posts %}
+        <div>
+            <h6 class="mb-0">{{ post.date | date: "%-d %B %Y" }}</h6>
+            <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
+        </div>
+        <br>
+        {% endfor %}
 
     </div>
 </div>
