word-wrap: break-word for title line

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: main
 
 <div class="container contentbox">
     <div class="contents">
-        <h1 class="display-1">contact</h1>
+        <h1 class="display-1 breakword">contact</h1>
         <hr>
         <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | contact
         <hr>
