--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ layout: main
 
 <div class="container contentbox">
     <div class="contents">
-        <h1 class="display-1">sohliloquies</h1>
+        <h1 class="display-1 breakword">sohliloquies</h1>
         <hr>
         blog | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
         <hr>
