--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ layout: main
 
 <div class="container contentbox">
     <div class="contents">
-        <h1 class="display-1">projects</h1>
+        <h1 class="display-1 breakword">projects</h1>
         <hr>
         <a href="/blog.html">blog</a> | projects | <a href="/contact.html">contact</a>
         <hr>
