oh gosh. did so much. ported css -> sass, added nojs support + mode switcher, did some code cleanup

--- a/blog.html
+++ b/blog.html
@@ -2,21 +2,30 @@
 layout: main
 ---
 
-<div class="container contentbox">
-    <div class="contents">
-        <h1 class="display-1 breakword">sohliloquies</h1>
-        <hr>
-        blog | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
-        <hr>
+
+<div class="withjs">
+    <canvas id="drawcanvas">Oh no, canvas not supported :(</canvas>
+    <canvas id="tilecanvas"></canvas>
+</div>
 
 
-        {% for post in site.posts %}
-        <div>
-            <h6 class="mb-0">{{ post.date | date: "%-d %B %Y" }}</h6>
-            <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-        </div>
-        <br>
-        {% endfor %}
-
+<div class="contentbox contents">
+    <h1 class="display-1 breakword">sohliloquies</h1>
+    <hr>
+    <div class="overflow-hidden">
+        <span>
+            blog | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
+        </span>
+        {% include switcher.html %}
     </div>
+    <hr>
+
+    {% for post in site.posts %}
+    <div>
+        <h6 class="mb-0">{{ post.date | date: "%-d %B %Y" }}</h6>
+        <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+    </div>
+    <br>
+    {% endfor %}
+
 </div>
