--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@ layout: intro
 landing: true
 ---
 
-<div>
+
+<div class="withjs">
+    <canvas class="bgcanvas" id="glcanvas"></canvas>
+
     <p id="greeting">you have arrived<br/>at eli dot sohl dot com</p>
     <p id="enter">enter</p>
+</div>
+
+
+<div class="withoutjs">
+    <div id="intro-card">
+        <p> you have arrived <br/> at <br/> eli dot sohl dot com </p>
+        <p> <a href="/blog.html">enter</a> </p>
+    </div>
 </div>
