--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,21 @@ layout: main
 
 <div class="contentbox contents">
     <h1 class="display-1 breakword">contact</h1>
+
     <hr>
+
     <div class="overflow-hidden">
         <span>
             <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | contact
         </span>
         {% include switcher.html %}
     </div>
+
     <hr>
-    <p>hey call me yeah?</p>
+
+    <p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
+    <p>you can also find me <a href="https://twitter.com/elisohl">on twitter</a>. my DMs are open.</p>
+    <p>for signal, ask over twitter or email.</p>
+    <p>my public key fingerprint: 0BC8 3D5B 2208 AEC9 2592 6DFF 451D 2B18 0A83 7DEB</p>
+
 </div>
