improved punctuation lol

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,6 @@ layout: main
     <p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
     <p>you can also find me <a href="https://twitter.com/elisohl">on twitter</a>. my DMs are open.</p>
     <p>for signal, ask over twitter or email.</p>
-    <p>my public key fingerprint is: 0BC8 3D5B 2208 AEC9 2592 6DFF 451D 2B18 0A83 7DEB</p>
+    <p>my public key fingerprint is 0BC8 3D5B 2208 AEC9 2592 6DFF 451D 2B18 0A83 7DEB.</p>
 
 </div>
