cleaned up templating & added nojs mathjax warning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ landing: true
 ---
 
 
-<div class="withjs">
+<div class="fancy">
     <canvas class="bgcanvas" id="glcanvas"></canvas>
 
     <p id="greeting">you have arrived<br/>at eli dot sohl dot com</p>
@@ -12,7 +12,7 @@ landing: true
 </div>
 
 
-<div class="withoutjs">
+<div class="simple">
     <div id="intro-card">
         <p> you have arrived <br/> at <br/> eli dot sohl dot com </p>
         <p> <a href="/blog.html">enter</a> </p>
