--- a/projects.html
+++ b/projects.html
@@ -27,41 +27,32 @@ function do_toggle(div_id) {
     </h2>
     <div id="theseus-details" class="display-none">
         <p>
-        I've been working on Theseus <a href="{% post_url 2017-02-17-theseus-robust-system-for-preserving %}">since early 2017</a>.
-        The goal: To create a robust system for sharing and preserving
-        research. The project was first conceived as a response to governmental
-        attempts at censorship of climate change research.
+        I've been working on this project <a href="{% post_url 2017-02-17-theseus-robust-system-for-preserving %}">since early 2017</a>.
+        The goal: to create a robust system for sharing and preserving
+        research. This was first conceived as a response to attempts by several
+        governments to censor research on climate change.
         </p>
 
         <p>
         The system consists of two parts: The actual application described
         above - <b>Theseus</b> - and a distributed hash table (DHT) on top of
-        which the application is built.
+        which the application is built. In theory, a number of existing DHT
+        algorithms could be used, but I'm designing a new one with the working
+        name <b>Theseus DHT</b>. I believe this new design can greatly improve
+        on today's popular DHTs' defenses against certain categories of attack,
+        particularly Sybil attacks.
         </p>
 
         <p>
-        The DHT is a very simple distributed database that the application uses
-        to form peer-to-peer connections and share data.
+        These projects' implementations are not yet complete, but the
+        theoretical results achieved so far (the best of which I'm still in the
+        process of writing up) are striking.
         </p>
 
         <p>
-        In theory, any number of DHT algorithms could be used, but I'm making a
-        new one. The working name for it is <b>Theseus DHT</b>. The motivation
-        for this extra effort is to try and improve on the state of the art for
-        defending against certain categories of attack, particularly Sybil
-        attacks.
-        </p>
-
-        <p>
-        The implementation is not yet complete, but the theoretical results
-        achieved so far (the best of which I'm still in the process of writing
-        up) are striking.
-        </p>
-
-        <p>
-        There's a lot about Theseus and Theseus DHT on my blog.
-        <a href="/tags/theseus.html">Here's a list of those posts</a>.
-        Bear in mind that not everything in them is up to date.
+        I've written a fair bit on this site about Theseus and Theseus DHT.
+        <a href="/tags/theseus.html">Here's a list of those posts</a> (though
+        bear in mind that not all of them are up to date).
         </p>
     </div>
 
@@ -81,28 +72,30 @@ function do_toggle(div_id) {
     </h2>
     <div id="cryptopals-details" class="display-none">
         <p>
-        These are a series of cryptography challenges written by the folks at
-        Matasano Security (which I believe has since been absorbed by NCC
-        Group). Sets 1 through 7 are available
-        <a href="https://cryptopals.com">here</a>, and you can check out Set 8
-        <a href="https://toadstyle.org/cryptopals/">here</a>. They start out
-        easy enough, but the later sets have a few genuinely tricky problems
-        hidden in them.
+        These are so much fun. They're a series of cryptography challenges
+        written by some folks who really know their stuff. Sets 1 through 7 are
+        available <a href="https://cryptopals.com">here</a>, and you can check
+        out Set 8 <a href="https://toadstyle.org/cryptopals/">here</a>. They
+        start out easy enough, but the later sets have some genuinely tricky
+        problems in them.
         </p>
 
         <p>
         You can check out my solutions
         <a href="https://github.com/wootfish/cryptopals">on Github</a>.
-        I've worked through sets 1 through 7 and plan on taking on set 8 soon.
+        I've worked through sets 1 through 7 so far, and I plan on taking on
+        set 8 soon.
         </p>
 
         <p>
         Back in the day I was very into <a href="https://projecteuler.net">Project Euler</a>
-        (I think I'm still in the <a href="https://projecteuler.net/profile/wootfish.png">99.4th percentile or so</a>
-        on there after half a decade of inactivity). I mention that because to
-        me, a lot of what makes Project Euler fun can also be found in
-        Cryptopals. It's a different and more interesting sort of programming,
-        and it's just so satisfying when you get it right.
+        (in fact, I'm still ranked in the <a href="https://projecteuler.net/profile/wootfish.png">99.4th percentile</a>
+        on there after half a decade of inactivity), and a lot of what makes
+        Project Euler fun can also be found in Cryptopals. Most programming is
+        hard in tedious ways; this stuff is hard in fun ways. The most
+        challenging parts of it are also the most interesting. And it's just so
+        damn satisfying when you finish troubleshooting and get to watch your
+        script work for the first time.
         </p>
     </div>
 
@@ -113,16 +106,17 @@ function do_toggle(div_id) {
     </h2>
     <div id="book-notes-details" class="display-none">
         <p>
-        I only take the time to write these about books I've really enjoyed;
-        as a result, these posts are less about offering deep criticism or
-        reviews and more about just trying to share some of what I like or find
-        compelling in the books I feature.
+        You can find a collection of these posts <a href="/tags/book-notes.html">here</a>.
         </p>
 
         <p>
-        You can find a collection of these posts <a href="/tags/book-notes.html">here</a>.
+        I only write these for books I've really enjoyed. The form, then, is
+        less of a review (since you already know what I think) and more of an
+        exploration. It's my attempt to share some of what makes these books so
+        compelling to me.
         </p>
     </div>
 
-    <hr>
+    <hr class="simple">
+    <div class="pb-3 fancy"></div>
 </div>
