force simple mode on mobile + minor sass cleanup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ landing: true
 
 <div class="simple">
     <div id="intro-card">
-        <p> you have arrived <br/> at <br/> eli dot sohl dot com </p>
+        <p> you have arrived at <br/> eli dot sohl dot com </p>
         <p> <a href="/blog.html">enter</a> </p>
     </div>
 </div>
