center-align nav links when fancy picker is hidden

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ function do_toggle(div_id) {
 <div class="contentbox contents">
     <h1 class="display-1 breakword">projects</h1>
     <hr>
-    <div class="overflow-hidden">
+    <div class="overflow-hidden" id="navlinks">
         <span>
             <a href="/blog.html">blog</a> | projects | <a href="/contact.html">contact</a>
         </span>
