--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ layout: main
 
     <hr>
 
-    <div class="overflow-hidden">
+    <div class="overflow-hidden" id="navlinks">
         <span>
             <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | contact
         </span>
