added <wbr> tags in page titles & adjusted breakpt

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: main
 
 
 <div class="contentbox contents">
-    <h1 class="display-1 breakword">contact</h1>
+    <h1 class="display-1 breakword">con<wbr>tact</h1>
 
     <hr>
 
