--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@ function do_toggle(div_id) {
 
 
 <div class="contentbox contents">
-    <h1 class="display-1 breakword">projects</h1>
+    <h1 class="display-1 breakword">proj<wbr>ects</h1>
     <hr>
     <div class="overflow-hidden" id="navlinks">
         <span>
