--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ landing: true
 <div class="fancy">
     <canvas class="bgcanvas" id="glcanvas"></canvas>
 
-    <p id="greeting">you have arrived<br/>at eli dot sohl dot com</p>
+    <p id="greeting">you have arrived<br/>at eli.sohl.com</p>
     <p id="enter">enter</p>
 </div>
 
 
 <div class="simple">
     <div id="intro-card">
-        <p> you have arrived at <br/> eli dot sohl dot com </p>
+        <p> you have arrived<br/>at eli.sohl.com </p>
         <p> <a href="/blog.html">enter</a> </p>
     </div>
 </div>
